src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_EventSetterInXaml.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"> 
      <DockPanel.Resources>
            <Style x:Key="ButtonStyle" TargetType="{x:Type TypeName=Button}">
                <Setter Property="Background" Value="Red" />
                <EventSetter Event="Click" Handler="OnClick" />

            </Style> 
      </DockPanel.Resources>
    
      <x:Code>
        <![CDATA[
            void OnClick(object sender, System.EventArgs args)
                {
                    
                }
        ]]>
     </x:Code>
 
</DockPanel>

</Page>
